cmake_minimum_required(VERSION 3.12)
set(TYPE pkgconfig)
set(COMPONENT avutil)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(PkgConfig REQUIRED)
pkg_check_modules(AVUTIL REQUIRED IMPORTED_TARGET libavutil)
add_executable            (${TEST}                 ${SRC_DIR}/main.cpp)
add_executable            (${TEST}_create_hwdevice ${SRC_DIR}/create_hwdevice.cpp)
target_link_libraries     (${TEST}                 PRIVATE PkgConfig::AVUTIL)
target_link_libraries     (${TEST}_create_hwdevice PRIVATE PkgConfig::AVUTIL)
add_test(${TEST} ${TEST})
