cmake_minimum_required(VERSION 3.12)
set(TYPE pkgconfig)
set(COMPONENT swresample)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(PkgConfig REQUIRED)
pkg_check_modules(SWRESAMPLE REQUIRED IMPORTED_TARGET libswresample)
add_executable            (${TEST}                 ${SRC_DIR}/main.cpp)
add_executable            (${TEST}_find_swr_engine ${SRC_DIR}/find_swr_engine.cpp)
target_link_libraries     (${TEST}                 PRIVATE PkgConfig::SWRESAMPLE)
target_link_libraries     (${TEST}_find_swr_engine PRIVATE PkgConfig::SWRESAMPLE)
add_test(${TEST} ${TEST})
